--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,162 @@
-html,
-body {
-  padding: 0;
+/* Root */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
+
+* {
+
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body {
+  background: #eee;
+  min-height: 100vh;
+  overflow-x: hidden;
+  --mainRed: rgb(150, 2, 2);
+}
+
+
+.main-section {
+  min-height: 100vh;
+  width: 100vw;
+  margin: 10vh auto;
+}
+
+
+
+.title {
+  text-align: center;
+  font-size: 4rem;
+  font-family: "Stick No Bills", sans-serif;
+  color: var(--mainRed);
+}
+
+@media screen and (max-width: 800px) {
+  .title {
+    font-size: 3rem;
+  }
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+/* LOGO */
+
+
+h2 {
+  text-shadow: 0px 0px 5px white;
+}
+
+span {
+  text-shadow: 2px 2px 2px black;
+}
+
+
+/* SmartfonPage */
+
+.smartphone-modal {
+  background: rgba(255, 255, 255, 0.99);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  transition: 1s;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
+.smartfonCircle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 25vw;
+  height: 25vw;
+  z-index: 1;
+  animation: smartfonCircle 3s linear infinite;
+}
+
+@media (orientation:portrait) and (max-width: 800px) {
+  .smartfonCircle {
+    width: 55vw;
+    height: 55vw;
+  }
+}
+
+@keyframes smartfonCircle {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+
+/* FAQ */
+.singleQuestion {
+  background-color: #fff;
+  border: var(--mainRed) 2px solid;
+  border-radius: 10px;
+  padding: 0px 20px;
+  width: 40vw;
+  transition: 1s;
+}
+
+
+.arrowrRightLeftFeatures {
+  color: whitesmoke;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+@media (orientation:portrait) and (max-width: 800px) {
+  .arrowrRightLeftFeatures {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.arrowrRightLeftFeatures:hover {
+  color: white;
+}
+
+.arrowrLeftFeaturesO {
+  color: rgb(120, 2, 2);
+  font-size: 2.5rem;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 3;
+}
+
+.arrowrRightFeaturesO {
+  z-index: 3;
+  color: rgb(120, 2, 2);
+  font-size: 2.5rem;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.cookieLink {
+  margin-left: 10px;
+  cursor: pointer;
+  color: var(--mainRed);
 }
