--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,3 +160,11 @@ span {
   cursor: pointer;
   color: var(--mainRed);
 }
+
+.loader {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
