--- a/styles/globals.css
+++ b/styles/globals.css
@@ -178,3 +178,25 @@ span {
     opacity: 0;
   }
 }
+
+.cookieClass {
+  background: rgba(0, 0, 0, .8);
+  font-size: 18px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+}
+
+@media (max-width: 800px) {
+  .cookieClass {
+    background: rgba(0, 0, 0, .8);
+    font-size: 18px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
+    height: 75vh;
+    padding-bottom: 30vh;
+  }
+}
