--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,9 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
 
 body {
   background: #eee;
@@ -179,15 +182,15 @@ span {
   }
 }
 
-.cookieClass {
+/* .cookieClass {
   background: rgba(0, 0, 0, .8);
   font-size: 18px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100vw;
-}
-
+} */
+/* 
 @media (max-width: 800px) {
   .cookieClass {
     background: rgba(0, 0, 0, .8);
@@ -196,7 +199,7 @@ span {
     justify-content: space-around;
     align-items: center;
     width: 100vw;
-    height: 75vh;
+    height: 50vh;
     padding-bottom: 30vh;
   }
-}
+} */
